<resources>
    <string name="app_name">SafehouseLab02</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_text">SignUp</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="sign_in_text">SignIn</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="dialog_text">You have signed in)</string>
    <string name="welcome_text">Welcome Screen</string>
    <string name="sensors">Sensors</string>
    <string name="logout">LogOut</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="new_email">New Email:</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="title_activity_profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="sensor_info">Sensor Info</string>
    <string name="title_activity_notification">NotificationActivity</string>
</resources>